--- a/apps/frontend/components/chat-users-list/chat-users-list.module.scss
+++ b/apps/frontend/components/chat-users-list/chat-users-list.module.scss
@@ -1,114 +1,114 @@
-@use "styles/common";
+@use 'styles/common';
 
 .notFound {
-  text-align: center;
-  margin-top: 4rem;
+	text-align: center;
+	margin-top: 4rem;
 }
 
 .list {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  overflow-y: auto;
-  max-height: 75dvh;
-  width: 100%;
-  margin: 0 auto;
+	list-style-type: none;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
+	overflow-y: auto;
+	max-height: 75dvh;
+	width: 100%;
+	margin: 0 auto;
 
-  @include common.mediaquery("tablet") {
-    border-radius: calc(var(--radius-small) + 1rem);
-    background-color: var(--color-secondary);
-    box-shadow: var(--shadow);
-    padding: 2rem;
-    gap: 1rem;
-    margin: 0;
-    max-height: unset;
-    height: calc(100vh - 15rem);
-  }
+	@include common.mediaquery('tablet') {
+		border-radius: calc(var(--radius-small) + 1rem);
+		background-color: var(--color-secondary);
+		box-shadow: var(--shadow);
+		padding: 2rem;
+		gap: 1rem;
+		margin: 0;
+		max-height: unset;
+		height: calc(100vh - 15rem);
+	}
 }
 
 .listItem {
-  width: 100%;
-  display: flex;
+	width: 100%;
+	display: flex;
 }
 
 .link {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  align-items: center;
-  gap: 1rem;
-  border-radius: var(--radius-medium);
-  background-color: var(--color-primary);
-  padding: 0 0.5rem;
-  height: 5rem;
-  width: 100%;
-  transition: background-color var(--transition);
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: flex-start;
+	align-items: center;
+	gap: 1rem;
+	border-radius: var(--radius-medium);
+	background-color: var(--color-primary);
+	padding: 0 0.5rem;
+	height: 5rem;
+	width: 100%;
+	transition: background-color var(--transition);
 
-  @include common.mediaquery("desktop") {
-    padding: 0.5rem 1rem;
-    height: 6rem;
-    box-shadow: var(--shadow);
-  }
+	@include common.mediaquery('desktop') {
+		padding: 0.5rem 1rem;
+		height: 6rem;
+		box-shadow: var(--shadow);
+	}
 }
 
 .rightCol {
-  display: flex;
-  flex-direction: column;
-  gap: 0.2rem;
+	display: flex;
+	flex-direction: column;
+	gap: 0.2rem;
 }
 
 .username {
-  max-width: 18rem;
-  overflow: hidden;
-  font-weight: 500;
-  text-overflow: ellipsis;
-  font-size: 1rem;
-  color: var(--text-gray);
+	max-width: 18rem;
+	overflow: hidden;
+	font-weight: 500;
+	text-overflow: ellipsis;
+	font-size: 1rem;
+	color: var(--text-gray);
 
-  @include common.mediaquery("desktop") {
-    font-size: 1.5rem;
-    font-weight: 400;
-    max-width: unset;
-  }
+	@include common.mediaquery('desktop') {
+		font-size: 1.5rem;
+		font-weight: 400;
+		max-width: unset;
+	}
 }
 
 .message {
-  font-size: 0.9rem;
-  color: var(--color-text-gray);
+	font-size: 0.9rem;
+	color: var(--color-text-gray);
 
-  @include common.mediaquery("desktop") {
-    font-size: 1rem;
-  }
+	@include common.mediaquery('desktop') {
+		font-size: 1rem;
+	}
 }
 
 .separator {
-  background-color: transparent;
-  border: none;
-  border-bottom: 1px solid var(--shadow-1);
-  width: 95%;
-  margin: auto;
+	background-color: transparent;
+	border: none;
+	border-bottom: 1px solid var(--shadow-100);
+	width: 95%;
+	margin: auto;
 }
 
 .loading {
-  justify-content: center;
-  align-items: center;
+	justify-content: center;
+	align-items: center;
 }
 
 .placeholderLoading {
-  width: 100%;
-  height: 5rem;
-  background-color: var(--color-secondary);
-  border-radius: var(--radius-small);
-  animation: var(--skeleton-animation);
+	width: 100%;
+	height: 5rem;
+	background-color: var(--color-secondary);
+	border-radius: var(--radius-small);
+	animation: var(--skeleton-animation);
 
-  @include common.mediaquery("desktop") {
-    height: 6rem;
-  }
+	@include common.mediaquery('desktop') {
+		height: 6rem;
+	}
 }
 
 .createdAt {
-  margin-left: auto;
-  @extend .message;
+	margin-left: auto;
+	@extend .message;
 }
