--- a/apps/frontend/components/drop-zone/drop-zone.module.scss
+++ b/apps/frontend/components/drop-zone/drop-zone.module.scss
@@ -1,47 +1,47 @@
-@use "styles/common";
+@use 'styles/common';
 
 .dropZone {
-  box-shadow: var(--shadow);
-  border-radius: var(--radius-small);
-  background-color: var(--color-secondary);
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  transition: var(--transition);
-  border: 1px solid var(--shadow-0-5);
-  gap: 1rem;
-  padding: 2rem 0;
+	box-shadow: var(--shadow);
+	border-radius: var(--radius-small);
+	background-color: var(--color-secondary);
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+	transition: var(--transition);
+	border: 1px solid var(--shadow-50);
+	gap: 1rem;
+	padding: 2rem 0;
 }
 
 .dropZoneState {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 0.5rem;
 }
 
 %commonActiveState {
-  box-shadow: var(--shadow);
+	box-shadow: var(--shadow);
 }
 
 .dropZoneError {
-  background-color: var(--color-secondary);
+	background-color: var(--color-secondary);
 }
 
 .dropZoneActive {
-  @extend %commonActiveState;
+	@extend %commonActiveState;
 }
 
 .dropIcon,
 .text {
-  pointer-events: none;
+	pointer-events: none;
 }
 
 .dropIconError {
-  @extend .dropIcon;
-  color: var(--color-error);
+	@extend .dropIcon;
+	color: var(--color-error);
 }
