--- a/apps/frontend/components/input/input.module.scss
+++ b/apps/frontend/components/input/input.module.scss
@@ -1,61 +1,61 @@
-@use "styles/common";
+@use 'styles/common';
 
 .container {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  gap: 0.5rem;
-  --gap: 0.7rem;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	gap: 0.5rem;
+	--gap: 0.7rem;
 }
 
 .containerError {
-  border-color: var(--color-error);
+	border-color: var(--color-error);
 }
 
 .label {
-  color: var(--color-text-gray);
-  transition: all var(--transition);
-  transition-property: background-color, transform, opacity;
-  display: inline-block;
-  margin-left: var(--margin-label);
+	color: var(--color-text-gray);
+	transition: all var(--transition);
+	transition-property: background-color, transform, opacity;
+	display: inline-block;
+	margin-left: var(--margin-label);
 }
 
 .input {
-  background-color: var(--color-secondary);
-  padding: 1rem var(--gap);
-  border-radius: var(--radius-small);
-  border: 1px solid var(--shadow-0-5);
-  box-shadow: var(--shadow);
-  color: var(--color-text);
+	background-color: var(--color-secondary);
+	padding: 1rem var(--gap);
+	border-radius: var(--radius-small);
+	border: 1px solid var(--shadow-50);
+	box-shadow: var(--shadow);
+	color: var(--color-text);
 
-  &:focus {
-    outline: none;
-  }
+	&:focus {
+		outline: none;
+	}
 }
 
 .primary {
-  background-color: var(--color-secondary);
+	background-color: var(--color-secondary);
 }
 
 .secondary {
-  @include common.mediaquery("desktop") {
-    background-color: var(--color-primary);
-  }
+	@include common.mediaquery('desktop') {
+		background-color: var(--color-primary);
+	}
 }
 
 .inputError {
-  border-color: var(--color-error-light);
+	border-color: var(--color-error-light);
 
-  &::placeholder {
-    color: var(--color-text);
-    font-weight: 500;
-  }
+	&::placeholder {
+		color: var(--color-text);
+		font-weight: 500;
+	}
 }
 
 .error {
-  color: var(--color-error);
-  padding-left: var(--gap);
-  font-weight: 400;
-  margin-left: var(--margin-label);
-  margin-top: 0.25rem;
+	color: var(--color-error);
+	padding-left: var(--gap);
+	font-weight: 400;
+	margin-left: var(--margin-label);
+	margin-top: 0.25rem;
 }
