--- a/apps/frontend/components/navbar/navbar.module.scss
+++ b/apps/frontend/components/navbar/navbar.module.scss
@@ -15,7 +15,8 @@
 }
 
 .navbar {
-	padding: 0.25rem 0.75rem;
+	--padding: 0.25rem 0.75rem;
+	padding: var(--padding);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -27,30 +28,29 @@
 	margin: 0 auto;
 	width: clamp(20rem, 60vw, 25rem);
 	z-index: 3;
-	border-radius: var(--radius-medium);
+	border-radius: calc(var(--radius-medium) + var(--padding));
 	box-shadow: var(--shadow);
-	border: 1px solid var(--shadow-1);
+	border: 1px solid var(--shadow-100);
 	background-color: var(--color-secondary);
 	opacity: 0;
 	transform: translateY(4rem);
 	animation: show-navbar 250ms cubic-bezier(0.3, 1.3, 0.4, 1) forwards;
 
 	@include common.mediaquery('tablet') {
-		padding: 0.5rem;
+		--padding: 0.5rem;
 	}
 
 	@include common.mediaquery('desktop') {
 		overflow-y: auto;
 		background-color: var(--color-secondary);
-		padding: 1rem;
+		--padding: 1rem;
 		gap: 0;
 		--gap-top: 3rem;
-		width: 21rem;
+		width: 20rem;
 		height: calc(100vh - calc(var(--gap-top) * 2));
 		top: var(--gap-top);
 		position: sticky;
 		box-shadow: var(--shadow);
-		border-radius: calc(var(--radius-medium) + 0.5rem);
 		margin-left: 3vw;
 		flex-direction: column;
 		text-align: left;
@@ -107,7 +107,7 @@
 	flex-direction: column;
 	width: 100%;
 	gap: 0.5rem;
-	border: 1px solid var(--shadow-0-5);
+	border: 1px solid var(--shadow-200);
 	box-shadow: var(--shadow);
 }
 
