--- a/apps/frontend/components/textarea/text-area.module.scss
+++ b/apps/frontend/components/textarea/text-area.module.scss
@@ -1,53 +1,53 @@
-@use "styles/common";
+@use 'styles/common';
 
 .container {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  --gap: 0.75rem;
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	--gap: 0.75rem;
 }
 
 .textAreaContainer {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--color-secondary);
-  border-radius: var(--radius-small);
-  overflow: hidden;
-  width: auto;
-  box-shadow: var(--shadow);
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	background-color: var(--color-secondary);
+	border-radius: var(--radius-small);
+	overflow: hidden;
+	width: auto;
+	box-shadow: var(--shadow);
 }
 
 .label {
-  color: var(--color-text-gray);
-  margin-bottom: 0.5rem;
-  display: inline-block;
-  width: calc(100% - 1rem);
-  margin-left: var(--margin-label);
-  transition: all var(--transition);
-  transition-property: background-color, transform, opacity;
+	color: var(--color-text-gray);
+	margin-bottom: 0.5rem;
+	display: inline-block;
+	width: calc(100% - 1rem);
+	margin-left: var(--margin-label);
+	transition: all var(--transition);
+	transition-property: background-color, transform, opacity;
 }
 
 .textArea {
-  min-width: 100%;
-  width: 100%;
-  height: 100%;
-  resize: vertical;
-  height: 4.5rem;
-  max-height: 5rem;
-  padding: 1rem var(--gap);
-  background-color: var(--color-secondary);
-  border-radius: var(--radius-small);
-  border: 1px solid var(--shadow-0-5);
+	min-width: 100%;
+	width: 100%;
+	height: 100%;
+	resize: vertical;
+	height: 4.5rem;
+	max-height: 5rem;
+	padding: 1rem var(--gap);
+	background-color: var(--color-secondary);
+	border-radius: var(--radius-small);
+	border: 1px solid var(--shadow-50);
 }
 
 .secondaryBg {
-  background-color: var(--color-primary);
+	background-color: var(--color-primary);
 }
 
 .error {
-  color: var(--color-error);
-  font-weight: 500;
-  margin-left: 0.75rem;
-  margin-top: 0.25rem;
+	color: var(--color-error);
+	font-weight: 500;
+	margin-left: 0.75rem;
+	margin-top: 0.25rem;
 }
