--- a/apps/frontend/components/tooltip-content/tooltip-content.module.scss
+++ b/apps/frontend/components/tooltip-content/tooltip-content.module.scss
@@ -1,12 +1,12 @@
 .tooltipContent {
-  z-index: 3;
-  background-color: var(--color-primary);
-  box-shadow: var(--shadow);
-  border: 1px solid var(--shadow-0-5);
-  border-radius: var(--radius-small);
-  padding: 0.5rem 1rem;
+	z-index: 3;
+	background-color: var(--color-primary);
+	box-shadow: var(--shadow);
+	border: 1px solid var(--shadow-50);
+	border-radius: var(--radius-small);
+	padding: 0.5rem 1rem;
 }
 
 .tooltipArrow {
-  fill: var(--color-primary);
+	fill: var(--color-primary);
 }
