--- a/apps/frontend/components/navbar/navbar.module.scss
+++ b/apps/frontend/components/navbar/navbar.module.scss
@@ -28,16 +28,17 @@
 	margin: 0 auto;
 	width: clamp(20rem, 60vw, 25rem);
 	z-index: 3;
-	border-radius: calc(var(--radius-medium) + var(--padding));
+	border-radius: var(--radius-medium);
 	box-shadow: var(--shadow);
 	border: 1px solid var(--shadow-100);
 	background-color: var(--color-secondary);
 	opacity: 0;
 	transform: translateY(4rem);
-	animation: show-navbar 250ms cubic-bezier(0.3, 1.3, 0.4, 1) forwards;
+	animation: show-navbar 200ms cubic-bezier(0.3, 1.3, 0.4, 1) forwards;
 
 	@include common.mediaquery('tablet') {
 		--padding: 0.5rem;
+		border-radius: calc(var(--radius-medium) + var(--padding));
 	}
 
 	@include common.mediaquery('desktop') {
@@ -51,14 +52,14 @@
 		top: var(--gap-top);
 		position: sticky;
 		box-shadow: var(--shadow);
-		margin-left: 3vw;
+		margin-left: var(--navbar-desktop-margin);
 		flex-direction: column;
 		text-align: left;
 		justify-content: start;
 		align-items: start;
 		transform: translateX(-10rem);
 
-		animation: show-navbar-desktop 250ms cubic-bezier(0.3, 1.3, 0.4, 1) forwards;
+		animation: show-navbar-desktop 200ms cubic-bezier(0.3, 1.3, 0.4, 1) forwards;
 	}
 }
 
