--- a/apps/frontend/components/pages/account/account.module.scss
+++ b/apps/frontend/components/pages/account/account.module.scss
@@ -19,6 +19,10 @@
 	@include common.mediaquery('tablet') {
 		gap: 2.5rem;
 	}
+
+	@include common.mediaquery('desktop') {
+		display: none;
+	}
 }
 
 .avatarName {
@@ -27,16 +31,20 @@
 }
 
 .accountDesktop {
-	display: flex;
-	background-color: var(--color-secondary);
-	box-shadow: var(--shadow);
-	justify-content: space-evenly;
-	align-items: flex-start;
-	max-width: 60rem;
-	margin: 0 auto;
-	padding: 2rem 0rem;
-	border: 1px solid var(--shadow-100);
-	border-radius: var(--radius-big);
+	display: none;
+
+	@include common.mediaquery('desktop') {
+		display: flex;
+		background-color: var(--color-secondary);
+		box-shadow: var(--shadow);
+		justify-content: space-evenly;
+		align-items: flex-start;
+		max-width: 60rem;
+		margin: 0 auto;
+		padding: 2rem 0rem;
+		border: 1px solid var(--shadow-100);
+		border-radius: var(--radius-big);
+	}
 }
 
 .leftCol {
