--- a/apps/frontend/components/post/post-images-carousel/post-images-carousel.module.scss
+++ b/apps/frontend/components/post/post-images-carousel/post-images-carousel.module.scss
@@ -1,57 +1,57 @@
-@use "styles/common";
+@use 'styles/common';
 
 .slider {
-  width: 100%;
-  position: relative;
-  overflow: hidden;
-  height: 100%;
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+	height: 100%;
 }
 
 .imagesContainer {
-  position: relative;
-  display: flex;
-  align-items: center;
-  --gap: 1.5rem;
-  gap: var(--gap);
-  width: 100%;
-  height: 100%;
+	position: relative;
+	display: flex;
+	align-items: center;
+	--gap: 1.5rem;
+	gap: var(--gap);
+	width: 100%;
+	height: 100%;
 
-  transition: transform 250ms ease-in-out;
-  transform: translateX(
-    calc(calc(-1 * var(--width) - var(--gap)) * var(--currentImage))
-  );
+	transition: transform var(--transition-fast);
+	transform: translateX(
+		calc(calc(-1 * var(--width) - var(--gap)) * var(--currentImage))
+	);
 }
 
 .draggable {
-  height: 100%;
+	height: 100%;
 }
 
 .grab {
-  cursor: grab;
+	cursor: grab;
 }
 
 .row {
-  display: flex;
+	display: flex;
 }
 
 .image {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  align-items: center;
-  flex-shrink: 0;
-  flex-grow: 1;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	align-items: center;
+	flex-shrink: 0;
+	flex-grow: 1;
 }
 
 .progress {
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
-  width: 3rem;
-  text-align: center;
-  padding: 0.25rem 0;
-  background-color: var(--color-primary);
-  box-shadow: var(--shadow);
-  border-radius: var(--radius-small);
+	position: absolute;
+	right: 1rem;
+	top: 1rem;
+	width: 3rem;
+	text-align: center;
+	padding: 0.25rem 0;
+	background-color: var(--color-primary);
+	box-shadow: var(--shadow);
+	border-radius: var(--radius-small);
 }
