--- a/apps/frontend/styles/_variables.scss
+++ b/apps/frontend/styles/_variables.scss
@@ -19,12 +19,11 @@
 	--color-text: #041f1e;
 	--color-text-gray: rgb(80, 80, 80);
 
-	--transition: 0.2s ease-in-out;
-	--transition-fast: 0.125s ease-in-out;
+	--transition: 250ms ease-in-out;
+	--transition-fast: 150ms ease-in-out;
 
 	--skeleton-animation: skeleton 2.5s linear infinite forwards;
 
-	--shadow-50: rgb(150, 150, 150, 0.05);
 	--shadow-100: rgba(150, 150, 150, 0.1);
 	--shadow-200: rgba(150, 150, 150, 0.2);
 
@@ -35,9 +34,10 @@
 
 	--margin-label: 0.2rem;
 
-	--header-width: calc(10rem + 10vw);
-
 	--post-width: clamp(16rem, 85vw, 22rem);
+
+	--navbar-desktop-width: 20rem;
+	--navbar-desktop-margin: 3vw;
 
 	@include common.mediaquery('tablet') {
 		--post-width: calc(18rem + 15vw);
@@ -65,7 +65,6 @@
 	--shadow: 0px 5px 10px 2px rgba(255, 255, 255, 0.03),
 		inset 0px 0px 2px 0px rgba(255, 255, 255, 0.04);
 
-	--shadow-50: rgb(222, 222, 222, 0.05);
 	--shadow-100: rgba(222, 222, 222, 0.1);
 	--shadow-200: rgba(222, 222, 222, 0.2);
 }
