--- a/apps/frontend/styles/globals.scss
+++ b/apps/frontend/styles/globals.scss
@@ -1,82 +1,82 @@
-@use "common.scss";
-@use "variables";
+@use 'common.scss';
+@use 'variables';
 
 :root {
-  @extend %variables;
+	@extend %variables;
 }
 
-[data-theme="DARK"] {
-  color-scheme: dark;
-  @extend %variablesDarkTheme;
+[data-theme='dark'] {
+	color-scheme: dark;
+	@extend %variablesDarkTheme;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 * {
-  padding: 0;
-  margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 body {
-  color: var(--color-text);
-  background-color: var(--color-primary);
+	color: var(--color-text);
+	background-color: var(--color-primary);
 }
 
 img,
 picture,
 svg,
 video {
-  display: block;
+	display: block;
 }
 
 button {
-  background-color: transparent;
-  border: 0;
+	background-color: transparent;
+	border: 0;
 
-  &:not(:disabled) {
-    cursor: pointer;
-  }
+	&:not(:disabled) {
+		cursor: pointer;
+	}
 }
 
 textarea,
 button,
 input {
-  font: inherit;
-  color: inherit;
+	font: inherit;
+	color: inherit;
 }
 
 a {
-  font: inherit;
-  color: inherit;
-  text-decoration: none;
+	font: inherit;
+	color: inherit;
+	text-decoration: none;
 }
 
 .visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
 }
 
 @keyframes skeleton {
-  0% {
-    opacity: 1;
-  }
+	0% {
+		opacity: 1;
+	}
 
-  50% {
-    opacity: 0.1;
-  }
+	50% {
+		opacity: 0.1;
+	}
 
-  100% {
-    opacity: 1;
-  }
+	100% {
+		opacity: 1;
+	}
 }
