--- a/apps/frontend/components/post/post-header/post-header.module.scss
+++ b/apps/frontend/components/post/post-header/post-header.module.scss
@@ -1,33 +1,57 @@
-@use "styles/common";
+@use 'styles/common';
 
 .header {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
 }
 
 .userAnchor {
-  display: flex;
-  align-items: center;
-  gap: 0.75rem;
+	display: flex;
+	align-items: center;
+	gap: 0.5rem;
+
+	@include common.mediaquery('desktop') {
+		gap: 0.75rem;
+	}
+}
+
+.usernameContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	justify-content: start;
+
+	@include common.mediaquery('desktop') {
+		flex-direction: row;
+		gap: 1ch;
+	}
 }
 
 .username {
-  font-weight: 700;
+	font-weight: 700;
+}
+
+.dot {
+	display: none;
+
+	@include common.mediaquery('desktop') {
+		display: inline;
+	}
 }
 
 .createdAt {
-  font-size: 0.9rem;
-  color: var(--color-text-gray);
+	font-size: 0.9rem;
+	color: var(--color-text-gray);
 
-  @include common.mediaquery("tablet") {
-    font-size: 1rem;
-  }
+	@include common.mediaquery('tablet') {
+		font-size: 1rem;
+	}
 }
 
 .options {
-  margin-left: auto;
-  display: flex;
-  gap: 1rem;
-  align-items: center;
+	margin-left: auto;
+	display: flex;
+	gap: 1rem;
+	align-items: center;
 }
