fix: remove session prefetching

--- a/apps/frontend/components/pages/account/account.module.scss
+++ b/apps/frontend/components/pages/account/account.module.scss
@@ -47,6 +47,18 @@
 	}
 }
 
+.accountDesktopPlaceholder {
+	@include common.mediaquery('desktop') {
+		background-color: var(--color-secondary);
+		box-shadow: var(--shadow);
+		max-width: 60rem;
+		height: 16.5rem;
+		margin: 0 auto;
+		border: 1px solid var(--shadow-100);
+		border-radius: var(--radius-big);
+	}
+}
+
 .leftCol {
 	display: flex;
 	flex-direction: column;
