--- a/apps/frontend/components/navbar/navbar-buttons/navbar-buttons.module.scss
+++ b/apps/frontend/components/navbar/navbar-buttons/navbar-buttons.module.scss
@@ -37,7 +37,7 @@
 	border-radius: var(--radius-medium);
 	transition: all var(--transition-fast);
 	font-size: 1.25rem;
-	transition-property: transform, background-color, border-color;
+	transition-property: transform;
 	border: 1px solid transparent;
 
 	@include common.mediaquery('desktop') {
