--- a/apps/frontend/components/navbar/navbar.module.scss
+++ b/apps/frontend/components/navbar/navbar.module.scss
@@ -55,8 +55,8 @@
 		margin-left: var(--navbar-desktop-margin);
 		flex-direction: column;
 		text-align: left;
-		justify-content: start;
-		align-items: start;
+		justify-content: flex-start;
+		align-items: flex-start;
 		transform: translateX(-10rem);
 
 		animation: show-navbar-desktop 200ms cubic-bezier(0.3, 1.3, 0.4, 1) forwards;
