--- a/apps/frontend/components/post/post-header-placeholder/post-header-placeholder.module.scss
+++ b/apps/frontend/components/post/post-header-placeholder/post-header-placeholder.module.scss
@@ -1,47 +1,47 @@
-@use "styles/common";
+@use 'styles/common';
 
 .placeholder {
-  display: flex;
-  align-items: center;
-  gap: 0.75rem;
-  margin-bottom: 1rem;
+	display: flex;
+	align-items: center;
+	gap: 0.75rem;
+	margin-bottom: 1rem;
 
-  @include common.mediaquery("desktop") {
-    gap: 1rem;
-  }
+	@include common.mediaquery('desktop') {
+		gap: 1rem;
+	}
 }
 
 .commonPlaceholder {
-  background-color: var(--color-primary);
-  animation: var(--skeleton-animation);
+	background-color: var(--color-primary);
+	animation: var(--skeleton-animation);
 }
 
 .avatar {
-  @extend .commonPlaceholder;
+	@extend .commonPlaceholder;
 
-  border-radius: 100%;
-  --avatar-size-placeholder: 2.5rem;
-  width: var(--avatar-size-placeholder);
-  height: var(--avatar-size-placeholder);
+	border-radius: 100%;
+	--avatar-size-placeholder: 2.2rem;
+	width: var(--avatar-size-placeholder);
+	height: var(--avatar-size-placeholder);
 
-  @include common.mediaquery("desktop") {
-    --avatar-size-placeholder: 3rem;
-  }
+	@include common.mediaquery('desktop') {
+		--avatar-size-placeholder: 2.5rem;
+	}
 }
 
 .name {
-  @extend .commonPlaceholder;
+	@extend .commonPlaceholder;
 
-  height: 2.5rem;
-  width: 7rem;
-  border-radius: var(--radius-small);
+	height: 2.5rem;
+	width: 7rem;
+	border-radius: var(--radius-small);
 }
 
 .button {
-  @extend .commonPlaceholder;
+	@extend .commonPlaceholder;
 
-  width: 4rem;
-  height: 2.5rem;
-  border-radius: var(--radius-small);
-  margin-left: auto;
+	width: 4rem;
+	height: 2.5rem;
+	border-radius: var(--radius-small);
+	margin-left: auto;
 }
