--- a/apps/frontend/components/post/post-header/post-header.module.scss
+++ b/apps/frontend/components/post/post-header/post-header.module.scss
@@ -19,8 +19,8 @@
 .usernameContainer {
 	display: flex;
 	flex-direction: column;
-	align-items: start;
-	justify-content: start;
+	align-items: flex-start;
+	justify-content: flex-start;
 
 	@include common.mediaquery('desktop') {
 		flex-direction: row;
