--- a/apps/frontend/components/post/post-image/post-image.module.scss
+++ b/apps/frontend/components/post/post-image/post-image.module.scss
@@ -12,34 +12,65 @@
 	opacity: 0;
 }
 
+.sliderImageContainer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.postImage {
+	display: grid;
+	grid-template-columns: 1fr;
+}
+
+.sliderImageThumbnail {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	pointer-events: none;
+	border-radius: var(--radius-small);
+	object-fit: contain;
+	width: var(--width);
+	box-shadow: 0 1px 2px var(--shadow-100);
+	flex-shrink: 0;
+	z-index: 2;
+	filter: blur(2px) saturate(1.2);
+
+	grid-row-start: 1;
+	grid-column-start: 1;
+}
+
+.sliderImageLoading {
+	opacity: 0;
+}
+
 .sliderImage {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-shrink: 0;
 	pointer-events: none;
-	user-select: none;
 	border-radius: var(--radius-small);
-	object-fit: cover;
+	object-fit: contain;
+	width: var(--width);
 	box-shadow: 0 1px 2px var(--shadow-100);
-	background-size: cover;
-	background-repeat: no-repeat;
+	flex-shrink: 0;
+	z-index: 1;
+
+	grid-row-start: 1;
+	grid-column-start: 1;
 }
 
 .square {
 	aspect-ratio: 1 / 1;
-	width: 100%;
-	height: auto;
+	height: 100%;
 }
 
 .landscape {
-	width: 100%;
 	height: auto;
 	aspect-ratio: 1.91 / 1;
 }
 
 .portrait {
 	height: 100%;
-	width: auto;
 	aspect-ratio: 4 / 5;
 }
