--- a/apps/frontend/components/post/post-modal/post-modal.module.scss
+++ b/apps/frontend/components/post/post-modal/post-modal.module.scss
@@ -1,129 +1,84 @@
 @use 'styles/common';
 
 .container {
-	z-index: 1;
-	width: clamp(22rem, 85vw, 50rem);
-	background-color: var(--color-secondary);
-	left: 0;
-	right: 0;
-	bottom: 0;
-	top: 0;
-	border-radius: var(--radius-medium);
-	box-shadow: var(--shadow);
-	--padding: 1rem;
-	padding: var(--padding);
-
-	@include common.mobile-landscape {
-		width: auto;
-	}
-
-	@include common.mediaquery('tablet') {
-		width: min(80vw, 45rem);
-		border-radius: var(--radius-medium);
-	}
-
-	@include common.mediaquery('desktop') {
-		width: min(80rem, 80vw);
-	}
-}
-
-.desktop {
-	--header-size: 3.5rem;
-	--footer-size: 10.5rem;
-	--comments-section-size: 55vh;
-	display: grid;
-	grid-template-columns: 40vw 2fr;
-	grid-template-rows: var(--header-size) var(--comments-section-size) var(
-			--footer-size
-		);
-	align-items: flex-start;
-	column-gap: 2rem;
-	width: 100%;
+	position: relative;
+	top: 1rem;
 }
 
 .closeButton {
 	position: absolute;
 	right: 0;
 	top: -3rem;
+	right: 1rem;
 }
 
-.closeButtonDesktop {
-	position: absolute;
-	top: -1rem;
-	right: -4rem;
-}
+.contentContainer {
+	background-color: var(--color-secondary);
+	padding: 1rem;
+	width: 90vw;
+	margin: 0 auto;
+	height: 80dvh;
+	overflow-y: auto;
+	position: relative;
+	border-radius: var(--radius-medium);
 
-.content {
-	display: flex;
-	flex-direction: column;
-	overflow-y: scroll;
-	min-height: 45vh;
-	min-height: 45dvh;
-	max-height: 65vh;
-	max-height: 65dvh;
+	@include common.mediaquery('tablet') {
+		width: 40rem;
+	}
+
+	@include common.mediaquery('desktop') {
+		width: calc(40rem + 25vw);
+		display: grid;
+		column-gap: 2vw;
+		grid-template-columns: 4fr 2fr;
+		grid-template-rows: auto 1fr auto auto;
+	}
 }
 
 .header {
 	margin-bottom: 1rem;
-}
-
-.footer {
-	grid-row: 2 / 2;
+	grid-row: 1 / 1;
+	grid-column: 1 / 3;
 }
 
 .carousel {
-	margin: 0 auto;
+	width: 100%;
 	height: 20rem;
-	width: 100%;
-	--post-width: 100%;
-}
-
-.carouselDesktop {
-	place-self: center;
-	grid-row: 1 / 4;
-	width: 100%;
-	height: 100%;
-}
-
-.postButtons {
-	padding-right: 1rem;
-}
-
-.commentsContainer {
-	margin-top: 1rem;
-
-	@include common.mobile-landscape {
-		margin-top: 0;
-	}
+	overflow: hidden;
 
 	@include common.mediaquery('desktop') {
-		grid-row: 1 / 3;
+		height: auto;
+		grid-column: 1 / 1;
+		grid-row: 2 / 5;
+	}
+}
+
+.footer {
+	@include common.mediaquery('desktop') {
+		grid-column: 2 / 3;
+		grid-row: 3 / 4;
+	}
+}
+
+.postComments {
+	padding: 1rem;
+
+	@include common.mediaquery('desktop') {
+		grid-column: 2 / 3;
+		grid-row: 2 / 3;
 		height: 100%;
-		grid-column: 2 / 2;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		align-self: flex-end;
-		margin-top: 0;
+		overflow-y: hidden;
 	}
 }
 
-.commentsDesktop {
-	grid-column: 2 / 3;
-	padding: 1rem 0;
-	height: 100%;
-}
-
-.commentForm {
-	grid-row: 3 / 4;
+.commentsForm {
 	background-color: var(--color-secondary);
-}
+	padding: 0.5rem;
 
-.form {
 	@include common.mediaquery('desktop') {
-		position: fixed;
-		bottom: 2rem;
-		right: 2rem;
-		max-width: 25rem;
+		background-color: transparent;
+		padding: 0;
+		grid-column: 2 / 3;
+		grid-row: 4 / 5;
 	}
 }
