fix: multiple images bug

--- a/apps/frontend/components/post/post-modal/post-modal.module.scss
+++ b/apps/frontend/components/post/post-modal/post-modal.module.scss
@@ -10,6 +10,10 @@
 	right: 0;
 	top: -3rem;
 	right: 1rem;
+
+	@include common.mediaquery('desktop') {
+		right: -2rem;
+	}
 }
 
 .contentContainer {
