--- a/apps/frontend/components/textarea/textarea.module.scss
+++ b/apps/frontend/components/textarea/textarea.module.scss
@@ -31,10 +31,8 @@
 .textArea {
 	min-width: 100%;
 	width: 100%;
-	height: 100%;
-	resize: vertical;
-	height: 4.5rem;
-	max-height: 5rem;
+	line-height: 1.5;
+	resize: none;
 	padding: 1rem var(--gap);
 	background-color: var(--color-secondary);
 	border-radius: var(--radius-small);
