feat: add placeholders

--- a/apps/frontend/components/pages/account/account.module.scss
+++ b/apps/frontend/components/pages/account/account.module.scss
@@ -59,6 +59,20 @@
 	}
 }
 
+.accountMobilePlaceholder {
+	background-color: var(--color-secondary);
+	box-shadow: var(--shadow);
+	max-width: 30rem;
+	height: 16.5rem;
+	margin: 0 auto;
+	border: 1px solid var(--shadow-100);
+	border-radius: var(--radius-big);
+
+	@include common.mediaquery('desktop') {
+		display: none;
+	}
+}
+
 .leftCol {
 	display: flex;
 	flex-direction: column;
