--- a/apps/frontend/components/post/post-image/post-image.module.scss
+++ b/apps/frontend/components/post/post-image/post-image.module.scss
@@ -1,17 +1,5 @@
 @use 'styles/common';
 
-.loader {
-	position: absolute;
-	width: var(--post-width);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.imgLoading {
-	opacity: 0;
-}
-
 .sliderImageContainer {
 	display: flex;
 	justify-content: center;
@@ -21,6 +9,8 @@
 .postImage {
 	display: grid;
 	grid-template-columns: 1fr;
+	place-content: center;
+	max-height: 100%;
 }
 
 .sliderImageThumbnail {
@@ -49,15 +39,16 @@
 	justify-content: center;
 	align-items: center;
 	pointer-events: none;
-	border-radius: var(--radius-small);
 	object-fit: contain;
 	width: var(--width);
 	box-shadow: 0 1px 2px var(--shadow-100);
 	flex-shrink: 0;
 	z-index: 1;
-
+	height: 100%;
+	overflow: auto;
 	grid-row-start: 1;
 	grid-column-start: 1;
+	border-radius: var(--radius-small);
 }
 
 .square {
@@ -65,11 +56,38 @@
 	height: 100%;
 }
 
+%background {
+	position: absolute;
+	width: 100%;
+	object-fit: cover;
+	aspect-ratio: 1 / 1;
+	filter: blur(15px) saturate(1.5) opacity(0.5);
+	height: 100%;
+	overflow: auto;
+}
+
+.backgroundOuter {
+	border-radius: var(--radius-small);
+	overflow: hidden;
+	height: 100%;
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.landscapeBackground {
+	@extend %background;
+}
+
+.portraitBackground {
+	@extend %background;
+}
+
 .landscape {
 	height: auto;
 	aspect-ratio: 1.91 / 1;
 }
-
 .portrait {
 	height: 100%;
 	aspect-ratio: 4 / 5;
