--- a/apps/frontend/components/post/post-modal/post-modal.module.scss
+++ b/apps/frontend/components/post/post-modal/post-modal.module.scss
@@ -35,7 +35,7 @@
 		display: grid;
 		column-gap: 2vw;
 		grid-template-columns: 4fr 2fr;
-		grid-template-rows: auto 1fr auto auto;
+		grid-template-rows: auto auto 1fr auto;
 	}
 }
 
@@ -60,7 +60,7 @@
 .footer {
 	@include common.mediaquery('desktop') {
 		grid-column: 2 / 3;
-		grid-row: 3 / 4;
+		grid-row: 2 / 3;
 	}
 }
 
@@ -69,7 +69,7 @@
 
 	@include common.mediaquery('desktop') {
 		grid-column: 2 / 3;
-		grid-row: 2 / 3;
+		grid-row: 3 / 4;
 		height: 100%;
 		overflow-y: hidden;
 	}
