--- a/apps/frontend/components/post/post-image/post-image.module.scss
+++ b/apps/frontend/components/post/post-image/post-image.module.scss
@@ -10,28 +10,21 @@
 	display: grid;
 	grid-template-columns: 1fr;
 	place-content: center;
-	max-height: 100%;
+	height: 100%;
+	width: var(--width, var(--post-width));
+	flex-shrink: 0;
+	position: relative;
 }
 
-.sliderImageThumbnail {
+.postImageLoader {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	pointer-events: none;
-	border-radius: var(--radius-small);
-	object-fit: contain;
-	width: var(--width);
-	box-shadow: 0 1px 2px var(--shadow-100);
-	flex-shrink: 0;
-	z-index: 2;
-	filter: blur(2px) saturate(1.2);
-
-	grid-row-start: 1;
-	grid-column-start: 1;
-}
-
-.sliderImageLoading {
-	opacity: 0;
+	transform: translate(-50%, -50%);
 }
 
 .sliderImage {
@@ -61,7 +54,8 @@
 	width: 100%;
 	object-fit: cover;
 	aspect-ratio: 1 / 1;
-	filter: blur(15px) saturate(1.5) opacity(0.5);
+	filter: blur(6px) opacity(0.7);
+	width: var(--width);
 	height: 100%;
 	overflow: auto;
 }
