--- a/apps/frontend/components/modals/followers-friends-modal/followers-friends-modal.module.scss
+++ b/apps/frontend/components/modals/followers-friends-modal/followers-friends-modal.module.scss
@@ -1,47 +1,53 @@
-@use "styles/common";
+@use 'styles/common';
 
 .container {
-  background-color: var(--color-primary);
-  padding: 1rem 0;
-  width: clamp(20rem, 80vw, 30rem);
-  border-radius: var(--radius-medium);
-  position: relative;
+	background-color: var(--color-primary);
+	padding: 1rem 0.5rem;
+	padding-bottom: 2rem;
+	width: clamp(20rem, 90vw, 35rem);
+	border-radius: var(--radius-medium);
+	position: relative;
 
-  @include common.mediaquery("desktop") {
-    width: clamp(20rem, 40vw, 35rem);
-    border-radius: var(--radius-medium);
-  }
+	@include common.mediaquery('desktop') {
+		width: clamp(20rem, 40vw, 35rem);
+		border-radius: var(--radius-medium);
+	}
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1rem;
-  margin-bottom: 1rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 1rem;
+	margin-bottom: 1.5rem;
 }
 
 .heading {
-  font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
 .list {
-  display: flex;
-  flex-direction: column;
-  list-style: none;
-  max-height: 20rem;
-  overflow-y: auto;
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	max-height: 20rem;
+	overflow-y: auto;
+	gap: 1rem;
 }
 
 .noData {
-  padding: 1rem;
-  text-align: center;
+	padding: 1rem;
+	text-align: center;
 }
 
 .placeholder {
-  margin: 0.5rem 1.5rem;
-  background-color: var(--color-secondary);
-  animation: var(--skeleton-animation);
-  min-height: 2.5rem;
-  border-radius: var(--radius-small);
+	margin: 0 1rem;
+	background-color: var(--color-secondary);
+	animation: var(--skeleton-animation);
+	min-height: 3rem;
+	border-radius: var(--radius-small);
+
+	@include common.mediaquery('desktop') {
+		min-height: 3.5rem;
+	}
 }
