--- a/apps/frontend/components/pages/account/account.module.scss
+++ b/apps/frontend/components/pages/account/account.module.scss
@@ -41,7 +41,8 @@
 		align-items: flex-start;
 		max-width: 60rem;
 		margin: 0 auto;
-		padding: 2rem 0rem;
+		padding: 2rem 1rem;
+		gap: 1rem;
 		border: 1px solid var(--shadow-100);
 		border-radius: var(--radius-big);
 	}
@@ -79,6 +80,7 @@
 	gap: 2rem;
 	justify-content: center;
 	align-items: center;
+	min-width: 10rem;
 }
 
 .rightCol {
