fix: post modal scroll

--- a/apps/frontend/src/components/post/post-modal/post-modal.module.css
+++ b/apps/frontend/src/components/post/post-modal/post-modal.module.css
@@ -22,12 +22,14 @@
 	height: 80dvh;
 	position: relative;
 	border-radius: var(--radius-medium);
+	overflow-y: auto;
 
 	@media (--medium-viewport) {
 		width: 40rem;
 	}
 
 	@media (--large-viewport) {
+		overflow-y: hidden;
 		width: calc(40rem + 25vw);
 		display: grid;
 		column-gap: 2vw;
