--- a/apps/frontend/src/components/navbar/navbar.module.css
+++ b/apps/frontend/src/components/navbar/navbar.module.css
@@ -26,17 +26,18 @@
 	margin: 0 auto;
 	width: clamp(20rem, 60vw, 25rem);
 	z-index: 3;
-	border-radius: var(--radius-medium);
+	border-radius: var(--radius-small);
 	box-shadow: var(--shadow);
 	border: 1px solid var(--shadow-100);
-	background-color: var(--color-secondary);
+	background-color: var(--color-secondary-transparent);
+	backdrop-filter: blur(24px);
 	opacity: 0;
 	transform: translateY(4rem);
 	animation: show-navbar 200ms cubic-bezier(0.3, 1.3, 0.4, 1) forwards;
 
 	@media (--medium-viewport) {
 		--padding: 0.5rem;
-		border-radius: calc(var(--radius-medium) + var(--padding));
+		border-radius: calc(var(--radius-small) + var(--padding) / 2);
 	}
 
 	@media (--large-viewport) {
