--- a/apps/frontend/src/styles/variables.global.css
+++ b/apps/frontend/src/styles/variables.global.css
@@ -1,6 +1,7 @@
 :root {
 	--color-primary: #ffffff;
 	--color-secondary: rgb(245, 245, 245);
+	--color-secondary-transparent: rgba(245, 245, 245, 0.8);
 	--color-accent: rgb(109, 194, 171);
 	--color-accent-darker: rgb(2, 189, 117);
 	--color-accent-active: rgb(113, 190, 170);
@@ -49,6 +50,7 @@
 [data-theme='dark'] {
 	--color-primary: rgb(35 39 47);
 	--color-secondary: rgb(52 58 70);
+	--color-secondary-transparent: rgba(52 58 70 0.3);
 
 	--color-error: rgb(221, 91, 65);
 	--color-error-light: rgba(194, 83, 83, 0.5);
