--- a/apps/frontend/src/styles/variables.global.css
+++ b/apps/frontend/src/styles/variables.global.css
@@ -28,7 +28,7 @@
 
 	--shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 	--radius-big: 0.8rem;
-	--radius-medium: 0.42rem;
+	--radius-medium: 0.4rem;
 	--radius-small: 0.3rem;
 
 	--margin-label: 0.2rem;
@@ -37,6 +37,8 @@
 
 	--navbar-desktop-width: 20rem;
 	--navbar-desktop-margin: 3vw;
+
+	--opacity: 0.4;
 
 	@media (--medium-viewport) {
 		--post-width: calc(18rem + 15vw);
@@ -50,7 +52,7 @@
 [data-theme='dark'] {
 	--color-primary: rgb(35 39 47);
 	--color-secondary: rgb(52 58 70);
-	--color-secondary-transparent: rgba(52 58 70 0.3);
+	--color-secondary-transparent: rgba(52, 58, 70, 0.7);
 
 	--color-error: rgb(221, 91, 65);
 	--color-error-light: rgba(194, 83, 83, 0.5);
@@ -67,4 +69,6 @@
 
 	--shadow-100: rgba(100, 100, 100, 0.08);
 	--shadow-200: rgba(100, 100, 100, 0.2);
+
+	--opacity: 0.2;
 }
